--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
           <p>When viewing this data, it is important to keep in mind a few important points. There will be outliers within 
             the data that will skew the data in either direction. Those states which have a higher percentage of wealthly
-            families will tend to show their state is doing well when in fact most average citizens do not have healthcare. 
+            families will tend to show their state is doing well when in fact, most average citizens do not have healthcare. 
             Population must also be considered as those states that have a low population are responsible for fewer citizens 
             when it comes to providing healthcare.
           </p>
